force-app/main/default/staticresources/python/Disappear/src/objects/PubAttachmentDetails__c.object
<CustomObject>
    <description>Junction object of a Blob [  attachment / Chatter Feed / Document etc ]  &amp; Pub

since we cannot add custom fields to attachment 
and need a unified way to extract a list of all documents related to a pub</description>
    <fields>
        <fullName>AttachmentDate__c</fullName>
        <label>AttachmentDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AttachmentName__c</fullName>
        <label>AttachmentName</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AttachmentType__c</fullName>
        <description>Indicate the type of &apos;Blob&apos; this detail record describes</description>
        <label>AttachmentType</label>
        <picklist>
            <picklistValues>
                <fullName>Publication Proposal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kick Off Meeting Minutes/Memo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Author Agreement Letter/Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Draft - Share with Authors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Draft Sent for FPR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Added by FPR Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Added by FPR Reviewer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final Attachment for Author Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Author Approvals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Author Contribution(s)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted Version</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted Version</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Response to Author Invitation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Substantial Comments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Response to Final Author Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approval to Remove Author</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Author Disclosures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approval to Add Author</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RAE Attestation Sec A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RAE Attestation Sec B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RAE Attestation Sec C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monitoring Checklist Part 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monitoring Checklist Part 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monitoring Checklist Part 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monitoring Checklist Part 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Author Limit Justification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change of Pub RAE Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monitoring Overrule</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Attachment_URL__c</fullName>
        <label>Attachment URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Author_Name__c</fullName>
        <description>Showing Author name in Attachment Tile for whom supporting attachment is added.</description>
        <formula>Publication_Author__r.Author__r.FirstName  &amp; &quot; &quot; &amp;  Publication_Author__r.Author__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Author Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FPR_Cycle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>FPR Cycle associated with the Pub

Optional if there is no FPR_cycle associated with the Pub</description>
        <label>FPR Cycle</label>
        <referenceTo>FPR_Cycle__c</referenceTo>
        <relationshipLabel>Attachment Details</relationshipLabel>
        <relationshipName>Attachment_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FeedItemIdForComment__c</fullName>
        <description>This is a text field which stores the Comment(Feed Item object) Id.</description>
        <label>Feed Item Id For Comment</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InteractionDate__c</fullName>
        <label>Interaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>InteractionType__c</fullName>
        <label>Interaction Type</label>
        <picklist>
            <picklistValues>
                <fullName>Final Approval By All Authors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IsSelected__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean for UI operation - please do NOT migrate or store data in this field</description>
        <label>IsSelected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LegacyCreatedBy__c</fullName>
        <label>Legacy Created By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacyCreatedDate__c</fullName>
        <label>Legacy Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LegacyLastModifiedBy__c</fullName>
        <label>Legacy Last Modified By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacyLastModifiedDate__c</fullName>
        <label>Legacy Last Modified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Publication_Author__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A lookup to Publication Author object to specify attachments to a Author via Pub Author.</description>
        <label>Publication Author</label>
        <referenceTo>pubAuthor__c</referenceTo>
        <relationshipLabel>Attachment Details</relationshipLabel>
        <relationshipName>Attachment_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Publication_Review_Team_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Publication Review Team Member</label>
        <referenceTo>PubReviewTeam__c</referenceTo>
        <relationshipLabel>Attachment Details</relationshipLabel>
        <relationshipName>Attachment_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Publication__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Publication</label>
        <referenceTo>Publication__c</referenceTo>
        <relationshipLabel>Attachment Details</relationshipLabel>
        <relationshipName>Attachment_Details</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SiebelRowId__c</fullName>
        <externalId>true</externalId>
        <label>SiebelRowId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <description>Size of attachent in bytes</description>
        <label>Size</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SubmissionCycle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Which Submission Cycle this attachment is from

Optional if there is no submission cycle associated with the pub at upload time</description>
        <label>Submission Cycle</label>
        <referenceTo>SubmissionCycle__c</referenceTo>
        <relationshipLabel>Attachment Details</relationshipLabel>
        <relationshipName>Attachment_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>What__c</fullName>
        <description>similar to WhatId in Activities - the what field stored the salesforce Id of the Blob
Can be Attachment, Content or Item Feed

Stored id as text since we cannot relates to Attachment, Content or ItemFeed</description>
        <label>What</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isLogicallyDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isLogicallyDeleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isSharedWithCommunity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To remove from the batch, to share it with all the community users</description>
        <label>isSharedWithCommunity</label>
        <type>Checkbox</type>
    </fields>
    <label>Attachment Detail</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Publication__c</columns>
        <columns>What__c</columns>
        <columns>Size__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Notes__c</columns>
        <columns>AttachmentDate__c</columns>
        <columns>AttachmentName__c</columns>
        <columns>isLogicallyDeleted__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AD-{000000000}</displayFormat>
        <label>AttachDetailId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attachment Details</pluralLabel>
    <recordTypes>
        <fullName>Author_Supporting_Documents</fullName>
        <active>true</active>
        <description>Record type is used to separate the Author Supporting type of Attachments</description>
        <label>Author Supporting Documents</label>
    </recordTypes>
    <recordTypes>
        <fullName>Business_Admin</fullName>
        <active>true</active>
        <description>Business Admin Users using this record type for Segregating Attachment types.</description>
        <label>Business Admin</label>
    </recordTypes>
    <recordTypes>
        <fullName>External_Writer</fullName>
        <active>true</active>
        <description>Restrict attachment types visible to the External Writer profile user</description>
        <label>External Writer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Functional_Pub_Team</fullName>
        <active>true</active>
        <description>Attachment type just for Functional Pub Team</description>
        <label>Functional Pub Team</label>
    </recordTypes>
    <recordTypes>
        <fullName>General</fullName>
        <active>true</active>
        <description>Used by anyone other than just Reviewers</description>
        <label>General</label>
    </recordTypes>
    <recordTypes>
        <fullName>Pub_Authors</fullName>
        <active>true</active>
        <description>For Pub Authors</description>
        <label>Pub Authors</label>
    </recordTypes>
    <recordTypes>
        <fullName>Pub_Team</fullName>
        <active>true</active>
        <description>Attachment type just for pub team</description>
        <label>Pub Team</label>
    </recordTypes>
    <recordTypes>
        <fullName>Reviewers</fullName>
        <active>true</active>
        <description>Used for attachment types for Reviwers</description>
        <label>Reviewers</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>